# test-task

./: .env  .gitignore  pyproject.toml
task/: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
task/display/: models.py  urls.py  views.py
task/display/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py  0004_displaygroup_delete_group.py  0005_extendedgroup_delete_displaygroup.py  0006_alter_extendedgroup_options_and_more.py  0007_delete_extendedgroup.py  0008_initial.py  0009_group_users.py  0010_remove_group_users.py
task/display/templates/: base.html
task/display/templates/display/: add_group.html  add_user.html  group_edit.html  groups.html  user_edit.html  users.html
task/task/: settings.py  urls.py
